<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, ShowrTimerActivity!</string>
    <string name="app_name">ShowrTimer</string>
    <string name="separator_view_text">:</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="clear">Clear</string>
    <string name="minor_view_text">Minor Interval</string>
    <string name="minor_post_view_text">(seconds)</string>
    <string name="major_view_text">Major Interval</string>
    <string name="major_post_view_text">(minutes)</string>
    <string name="add_button_text">Add</string>
    <string name="settings">Settings</string>
    <string name="main">Timer</string>
    
    <string-array name="minor_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>10</item>
        <item>12</item>
        <item>15</item>
        <item>20</item>
        <item>30</item>
        <item>60</item>
    </string-array>
        <string name="delete">Delete</string>

</resources>