<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/minorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/minorView"
            android:layout_width="0dp"
            android:layout_weight="0.34"
            android:layout_height="wrap_content"
            android:text="@string/minor_view_text"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Spinner
            android:id="@+id/minorSpinner"
            android:layout_width="0dp"
            android:layout_weight="0.33"
            android:layout_height="wrap_content"
            android:prompt="@string/minor_view_text" />

        <TextView
            android:id="@+id/minorPostView"
            android:layout_width="0dp"
            android:layout_weight="0.33"
            android:layout_height="wrap_content"
            android:text="@string/minor_post_view_text"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/majorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/majorAddLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/majorView"
                android:layout_width="0dp"
            	android:layout_weight="0.34"
                android:layout_height="wrap_content"
                android:text="@string/major_view_text"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/majorText"
                android:layout_width="0dp"
            	android:layout_weight="0.33"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/majorPostView"
                android:layout_width="0dp"
            	android:layout_weight="0.22"
                android:layout_height="wrap_content"
                android:text="@string/major_post_view_text"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/majorButton"
                android:layout_width="0dp"
            	android:layout_weight="0.11"
                android:layout_height="wrap_content"
                android:onClick="addMajorClicked"
                android:text="@string/add_button_text" />
        </LinearLayout>

        <ListView
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>